<resources>
    <string name="app_name">BuildYourBD</string>
    <string name="desc_volver">Volver</string>
    <string name="title_crear_cuenta">Crear cuenta</string>
    <string name="label_nombre">Nombre</string>
    <string name="hint_nombre">Tu Nombre Aquí</string>
    <string name="label_email">Correo electrónico</string>
    <string name="hint_email">tunombre@gmail.com</string>
    <string name="label_contrasenia">Contraseña</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="label_repetir_contrasenia">Repetir contraseña</string>
    <string name="hint_repetir_contrasenia">Repetir contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="err_campos_vacios">Por favor llena todos los campos</string>
    <string name="err_contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="receta_ensalada_titulo">Ensalada Mediterránea</string>
    <string name="receta_ensalada_desc">Tomate, pepino, aceitunas, queso feta y aderezo de limón</string>
    <string name="desc_receta_ensalada">Imagen de Ensalada Mediterránea</string>
    <string name="receta_smoothie_titulo">Smoothie de Frutos Rojos</string>
    <string name="receta_smoothie_desc">Fresas, arándanos, yogur griego y miel</string>
    <string name="desc_receta_smoothie">Imagen de Smoothie de Frutos Rojos</string>
    <string name="btn_ver_detalle">Ver detalle</string>
    <string name="title_recetas">Recetas</string>
    <string name="title_comunidad">Comunidad</string>
    <string name="subtitle_comunidad">Únete a la conversación y comparte tus logros</string>
    <string name="btn_agregar_publicacion">Nueva publicación</string>
    <string name="desc_recycler_comunidad">Lista de publicaciones de la comunidad</string>
    <string name="desc_comunidad_icon">Icono de la comunidad</string>
    <string name="welcome_comunidad_title">Bienvenido a la comunidad!</string>
    <string name="welcome_comunidad_desc">Aquí encontrarás publicaciones recientes de otros usuarios, consejos y novedades.</string>


</resources>
